--- a/demo/index.html
+++ b/demo/index.html
@@ -6,10 +6,10 @@
   <base href="/tree-view/demo/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="/assets/fontawesome/web-fonts-with-css/css/fontawesome-all.css" rel="stylesheet">
-<link href="styles.d41d8cd98f00b204e980.bundle.css" rel="stylesheet"/></head>
+  <link rel="icon" type="image/x-icon" href="/tree-view/demo/favicon.ico">
+  <link href="/tree-view/demo/assets/fontawesome/web-fonts-with-css/css/fontawesome-all.css" rel="stylesheet">
+<link href="/tree-view/demo/styles.bundle.css" rel="stylesheet"/></head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.805dd9bcb16d9d88b730.bundle.js"></script><script type="text/javascript" src="polyfills.241eaa155ffb29ebef1d.bundle.js"></script><script type="text/javascript" src="vendor.79bc84ac6a7b019e7ce7.bundle.js"></script><script type="text/javascript" src="main.350c9fd21c09d2c7c962.bundle.js"></script></body>
+<script type="text/javascript" src="/tree-view/demo/inline.bundle.js"></script><script type="text/javascript" src="/tree-view/demo/polyfills.bundle.js"></script><script type="text/javascript" src="/tree-view/demo/vendor.bundle.js"></script><script type="text/javascript" src="/tree-view/demo/main.bundle.js"></script></body>
 </html>
